  attribute to itself without any prior assignment.

  Closes #1555


..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.2?
============================
Release date: TBA

* Fix false positive for ``superfluous-parens`` for patterns like
  "return (a or b) in iterable".

  Closes #5803


What's New in Pylint 2.13.1?
============================
Release date: 2022-03-26

* Fix a regression in 2.13.0 where ``used-before-assignment`` was emitted for
  the usage of a nonlocal in a try block.

  Fixes #5965

* Avoid emitting ``raising-bad-type`` when there is inference ambiguity on
  the variable being raised.

  Closes #2793

* Loosen TypeVar default name pattern a bit to allow names with multiple uppercase
  characters. E.g. ``HVACModeT`` or ``IPAddressT``.

  Closes #5981

* Fixed false positive for ``unused-argument`` when a ``nonlocal`` name is used
  in a nested function that is returned without being called by its parent.

  Closes #5187

* Fix program crash for ``modified_iterating-list/set/dict`` when the list/dict/set
  being iterated through is a function call.

  Closes #5969

* Don't emit ``broken-noreturn`` and ``broken-collections-callable`` errors
  inside ``if TYPE_CHECKING`` blocks.


What's New in Pylint 2.13.0?
============================
Release date: 2022-03-24

* Add missing dunder methods to ``unexpected-special-method-signature`` check.

* No longer emit ``no-member`` in for loops that reference ``self`` if the binary operation that
  started the for loop uses a ``self`` that is encapsulated in tuples or lists.

  Ref PyCQA/astroid#1360
  Closes #4826

* Output better error message if unsupported file formats are used with ``pyreverse``.

  Closes #5950

* Fix pyreverse diagrams type hinting for classmethods and staticmethods.

* Fix pyreverse diagrams type hinting for methods returning None.

* Fix matching ``--notes`` options that end in a non-word character.
